force-app/main/default/objects/Lead/fields/CWS_Lead_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Source_Most_Recent__c</fullName>
    <label>Lead Source-Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advic Test</fullName>
                <isActive>false</isActive>
                <label>Advic Test</label>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AUTO-Q1-21-CS-ITCentralStation-LND-TF-NA-Buyers-Guide</fullName>
                <isActive>false</isActive>
                <label>AUTO-Q1-21-CS-ITCentralStation-LND-TF-NA-Buyers-Guide</label>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
                <isActive>false</isActive>
                <label>Bing</label>
            </value>
            <value>
                <fullName>channelfutures</fullName>
                <isActive>false</isActive>
                <label>channelfutures</label>
            </value>
            <value>
                <fullName>Channel Generated</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>CS - IDG Connect</fullName>
                <isActive>false</isActive>
                <label>CS - IDG Connect</label>
            </value>
            <value>
                <fullName>CS - Madison Logic</fullName>
                <isActive>false</isActive>
                <label>CS - Madison Logic</label>
            </value>
            <value>
                <fullName>CS - TechTarget</fullName>
                <isActive>false</isActive>
                <label>CS - TechTarget</label>
            </value>
            <value>
                <fullName>CTRL-Q1-21-CS-ITCentralStation-LND-TF-NA-Buyers-Guide</fullName>
                <isActive>false</isActive>
                <label>CTRL-Q1-21-CS-ITCentralStation-LND-TF-NA-Buyers-Guide</label>
            </value>
            <value>
                <fullName>Deal Reg</fullName>
                <isActive>false</isActive>
                <label>Deal Reg</label>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
                <isActive>false</isActive>
                <label>Direct Mail</label>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Distributor Recruitment</fullName>
            </value>
            <value>
                <fullName>DuckDuckGo</fullName>
                <isActive>false</isActive>
                <label>DuckDuckGo</label>
            </value>
            <value>
                <fullName>Ecosia</fullName>
                <isActive>false</isActive>
                <label>Ecosia</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email Transactional</fullName>
                <isActive>false</isActive>
                <label>Email Transactional</label>
            </value>
            <value>
                <fullName>Event partner</fullName>
                <isActive>false</isActive>
                <label>Event partner</label>
            </value>
            <value>
                <fullName>Events Hosted</fullName>
            </value>
            <value>
                <fullName>Events Sponsored</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
                <isActive>false</isActive>
                <label>Google</label>
            </value>
            <value>
                <fullName>LinkedIn Lead Gen</fullName>
                <isActive>false</isActive>
                <label>LinkedIn Lead Gen</label>
            </value>
            <value>
                <fullName>LIS0111-AUTO-Q4-20-CRM-Google-EXP-BF-NA-Demo-Manage-Automate</fullName>
                <isActive>false</isActive>
                <label>LIS0111-AUTO-Q4-20-CRM-Google-EXP-BF-NA-Demo-Manage-Automate</label>
            </value>
            <value>
                <fullName>List-Based Ads</fullName>
            </value>
            <value>
                <fullName>List-based Advertising</fullName>
                <isActive>false</isActive>
                <label>List-based Advertising</label>
            </value>
            <value>
                <fullName>List Import</fullName>
                <isActive>false</isActive>
                <label>List Import</label>
            </value>
            <value>
                <fullName>Marketing Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>