force-app/main/default/objects/Lead/fields/CWS_Lead_Sub_Source_Most_recent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Sub_Source_Most_recent__c</fullName>
    <description>Use to capture the Sub Source of the Lead</description>
    <inlineHelpText>Captures the Lead&apos;s secondary source.</inlineHelpText>
    <label>Lead Sub Source – Most recent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Adroll</fullName>
            </value>
            <value>
                <fullName>Advic Test</fullName>
                <isActive>false</isActive>
                <label>Advic Test</label>
            </value>
            <value>
                <fullName>ARN</fullName>
            </value>
            <value>
                <fullName>AUTO-Q2-21-CRM-Facebook-LND-TF-NA-Standardization</fullName>
                <isActive>false</isActive>
                <label>AUTO-Q2-21-CRM-Facebook-LND-TF-NA-Standardization</label>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>BlueChip Infotech</fullName>
            </value>
            <value>
                <fullName>Blue Solutions</fullName>
            </value>
            <value>
                <fullName>Brightgauge Site</fullName>
            </value>
            <value>
                <fullName>BrightTalk</fullName>
            </value>
            <value>
                <fullName>BusinessCom</fullName>
            </value>
            <value>
                <fullName>Call Blitz</fullName>
            </value>
            <value>
                <fullName>Cannata</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>CBSInteractive</fullName>
            </value>
            <value>
                <fullName>ChannelE2E</fullName>
                <isActive>false</isActive>
                <label>ChannelE2E</label>
            </value>
            <value>
                <fullName>Channel E2E</fullName>
            </value>
            <value>
                <fullName>Channel Futures</fullName>
            </value>
            <value>
                <fullName>Channel Pro</fullName>
            </value>
            <value>
                <fullName>Channel Pro UK</fullName>
            </value>
            <value>
                <fullName>ConnectWise Site</fullName>
            </value>
            <value>
                <fullName>Conversica</fullName>
            </value>
            <value>
                <fullName>CRN Channel Co</fullName>
            </value>
            <value>
                <fullName>CRN Next Media</fullName>
            </value>
            <value>
                <fullName>CRN UK Incisive Media</fullName>
            </value>
            <value>
                <fullName>CS1392-TL-Q4-2020-VQL-Activate-LND-MF-EMEA-BANT</fullName>
                <isActive>false</isActive>
                <label>CS1392-TL-Q4-2020-VQL-Activate-LND-MF-EMEA-BANT</label>
            </value>
            <value>
                <fullName>D&amp;H</fullName>
            </value>
            <value>
                <fullName>Dekkers</fullName>
            </value>
            <value>
                <fullName>Demandbase</fullName>
            </value>
            <value>
                <fullName>Demand Gen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>