force-app/main/default/objects/Lead/fields/CWS_Lead_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Unique_ID__c</fullName>
    <description>Used as a unique identifier for the Lead</description>
    <displayFormat>LED - {00000000}</displayFormat>
    <inlineHelpText>Used as a unique identifier for the Lead.</inlineHelpText>
    <label>Lead Unique Identifier</label>
    <type>AutoNumber</type>
</CustomField>