force-app/main/default/objects/Lead/fields/CWS_LeanData_Owner_Assignment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_LeanData_Owner_Assignment_Date_Time__c</fullName>
    <description>Updated by LeanData Graph when owner is assigned during working hours.</description>
    <label>LeanData Owner Assignment Date Time</label>
    <type>DateTime</type>
</CustomField>