force-app/main/default/objects/Lead/fields/CWS_Legacy_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Lead_ID__c</fullName>
    <description>Use to capture the external unique ID of Legacy Lead</description>
    <externalId>true</externalId>
    <inlineHelpText>Indicates the Lead&apos;s legacy ID, either from ConnectWise Manage or Continuum Salesforce.</inlineHelpText>
    <label>Legacy Lead ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>