force-app/main/default/objects/Lead/fields/CWS_Legacy_MNG_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_MNG_Lead_ID__c</fullName>
    <description>Use to capture the external unique ID of Legacy MNG Lead</description>
    <inlineHelpText>Indicates the Lead&apos;s legacy ConnectWise Manage ID.</inlineHelpText>
    <label>Legacy MNG Lead ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>