force-app/main/default/objects/Lead/fields/CWS_Legacy_Salesforce_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Salesforce_Lead_ID__c</fullName>
    <description>Use to capture the unique external Id of Legacy Lead records</description>
    <inlineHelpText>Indicates the Lead&apos;s legacy Continuum Salesforce ID.</inlineHelpText>
    <label>Legacy Salesforce Lead ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>