force-app/main/default/objects/Lead/fields/CWS_Main_revenue_sources__c.field-meta.xml
<CustomField>
    <fullName>CWS_Main_revenue_sources__c</fullName>
    <description>Use to capture the Main Revenue Sources of CW</description>
    <inlineHelpText>Captures the Lead&apos;s main sources of revenue during sales discovery.</inlineHelpText>
    <label>Main revenue sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Break Fix</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>