force-app/main/default/objects/Lead/fields/CWS_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manager_Email__c</fullName>
    <description>Captures the lead owner manager email</description>
    <inlineHelpText>Captures the Lead Owner&apos;s manager&apos;s email.</inlineHelpText>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>