force-app/main/default/objects/Lead/fields/CWS_ManagerFullName__c.field-meta.xml
<CustomField>
    <fullName>CWS_ManagerFullName__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp;  Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Captures the Lead Owner&apos;s manager&apos;s name.</inlineHelpText>
    <label>Manager Full Name</label>
    <type>Text</type>
</CustomField>