force-app/main/default/objects/Lead/fields/CWS_Marketo_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Marketo_ID__c</fullName>
    <inlineHelpText>Captures the Lead&apos;s unique Marketo ID.</inlineHelpText>
    <label>Marketo Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>