force-app/main/default/objects/Lead/fields/CWS_Mkg_Subscription_CW_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>CWS_Mkg_Subscription_CW_Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mkg Subscription - CW Marketplace</label>
    <type>Checkbox</type>
</CustomField>