force-app/main/default/objects/Lead/fields/CWS_Mkg_Subscription_Events__c.field-meta.xml
<CustomField>
    <fullName>CWS_Mkg_Subscription_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mkg Subscription - Events</label>
    <type>Checkbox</type>
</CustomField>