force-app/main/default/objects/Lead/fields/CWS_Mkg_Subscription_PartnerProgram_News__c.field-meta.xml
<CustomField>
    <fullName>CWS_Mkg_Subscription_PartnerProgram_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mkg Subscription - Partner Program News</label>
    <type>Checkbox</type>
</CustomField>