force-app/main/default/objects/Lead/fields/CWS_No_of_Servers_Managed__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_of_Servers_Managed__c</fullName>
    <description>Use to capture the no of Servers Managed</description>
    <label># of Servers Managed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>