force-app/main/default/objects/Lead/fields/CWS_No_of_Workstations__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_of_Workstations__c</fullName>
    <description>Use to capture the no of workstations managed</description>
    <inlineHelpText>Captures the number of workstations, servers, or agents managed by the Lead during sales discovery.</inlineHelpText>
    <label># of Workstations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>