force-app/main/default/objects/Lead/fields/CWS_No_Territory_Mapping_Found__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_Territory_Mapping_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether a territory mapping was found based on the Lead&apos;s address.</inlineHelpText>
    <label>No Territory Mapping Found</label>
    <type>Checkbox</type>
</CustomField>