force-app/main/default/objects/Lead/fields/CWS_Operation_service_delivery_model__c.field-meta.xml
<CustomField>
    <fullName>CWS_Operation_service_delivery_model__c</fullName>
    <inlineHelpText>Captures the Lead&apos;s operation service delivery model during sales discovery.</inlineHelpText>
    <label>Operation service delivery model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do it yourself</fullName>
            </value>
            <value>
                <fullName>As a Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>