force-app/main/default/objects/Lead/fields/CWS_Page_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Page_Source_Most_Recent__c</fullName>
    <description>Most Recent Marketo Page Source mapped by Marketo Integration</description>
    <label>Page Source Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>