force-app/main/default/objects/Lead/fields/CWS_Persona__c.field-meta.xml
<CustomField>
    <fullName>CWS_Persona__c</fullName>
    <inlineHelpText>Captures the Lead&apos;s role in their organization.</inlineHelpText>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Persona</valueSetName>
    </valueSet>
</CustomField>