force-app/main/default/objects/Lead/fields/CWS_Potential_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>CWS_Potential_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by flow on the duplicate record set.  Used in sync to Outreach</description>
    <label>Potential Duplicate</label>
    <type>Checkbox</type>
</CustomField>