force-app/main/default/objects/Lead/fields/CWS_Product_Intrest__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Intrest__c</fullName>
    <description>NOTE: Please discuss any pick-list additions or changes to this field with Allison Stolldorf prior to editing this field.</description>
    <inlineHelpText>Captures the product(s) in which the Lead has expressed interest.</inlineHelpText>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Product_Interest</valueSetName>
    </valueSet>
</CustomField>