force-app/main/default/objects/Lead/fields/CWS_Program_Applying_To__c.field-meta.xml
<CustomField>
    <fullName>CWS_Program_Applying_To__c</fullName>
    <inlineHelpText>On channel partner onboarding Leads, indicates to which channel partner program the Lead is applying (i.e. Distributor or Reseller).</inlineHelpText>
    <label>Program Applying To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>