force-app/main/default/objects/Lead/fields/CWS_Region__c.field-meta.xml
<CustomField>
    <fullName>CWS_Region__c</fullName>
    <inlineHelpText>Captures the Lead&apos;s region based on their address.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Region</valueSetName>
    </valueSet>
</CustomField>