force-app/main/default/objects/Lead/fields/CWS_RingLead_Archive__c.field-meta.xml
<CustomField>
    <fullName>CWS_RingLead_Archive__c</fullName>
    <label>RingLead Archive</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>