force-app/main/default/objects/Lead/fields/CWS_Skip_Routing__c.field-meta.xml
<CustomField>
    <fullName>CWS_Skip_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>14022462 Used to skip Leandata routing</description>
    <inlineHelpText>If checked skips Leandata routing</inlineHelpText>
    <label>Skip Routing</label>
    <type>Checkbox</type>
</CustomField>