force-app/main/default/objects/Lead/fields/CWS_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sub_Industry__c</fullName>
    <description>Use to capture the Sub Industry of the Lead</description>
    <inlineHelpText>Captures the Lead&apos;s sub industry based on industry.</inlineHelpText>
    <label>Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetName>CWS_Sub_Industry</valueSetName>
    </valueSet>
</CustomField>