force-app/main/default/objects/Lead/fields/CWS_Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CWS_Team_Assignment__c</fullName>
    <inlineHelpText>Indicates to which product group or team (SE/PSE/AM) the converted Lead should be routed.</inlineHelpText>
    <label>Team Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Team_Assignment</valueSetName>
    </valueSet>
</CustomField>