force-app/main/default/objects/Lead/fields/CWS_Territory__c.field-meta.xml
<CustomField>
    <fullName>CWS_Territory__c</fullName>
    <inlineHelpText>Captures the Lead&apos;s territory based on their address.</inlineHelpText>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Territory</valueSetName>
    </valueSet>
</CustomField>