force-app/main/default/objects/Lead/fields/CWS_using_any_ConnectWise_Solution__c.field-meta.xml
<CustomField>
    <fullName>CWS_using_any_ConnectWise_Solution__c</fullName>
    <inlineHelpText>Indicates whether the Lead is currently using any ConnectWise solution, selected during sales discovery.</inlineHelpText>
    <label>Currently using any ConnectWise Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>