force-app/main/default/objects/Lead/fields/CWS_X2_Tier__c.field-meta.xml
<CustomField>
    <fullName>CWS_X2_Tier__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this is a Lead for an end customer purchasing through a reseller purchasing through a distributor.</inlineHelpText>
    <label>2-Tier</label>
    <type>Checkbox</type>
</CustomField>