force-app/main/default/objects/Lead/fields/ga_cid__c.field-meta.xml
<CustomField>
    <fullName>ga_cid__c</fullName>
    <description>This field is used to capture the Google Analytics Client ID and it is used in the Lead Mapping.
Request- OBD-3418</description>
    <inlineHelpText>This field is used to capture the Google Analytics Client ID.</inlineHelpText>
    <label>ga.cid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>