force-app/main/default/objects/Lead/fields/NeverBounceValidationResult__c.field-meta.xml
<CustomField>
    <fullName>NeverBounceValidationResult__c</fullName>
    <label>NeverBounce Validation Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>