force-app/main/default/objects/Lead/fields/tz__DST_Setting__c.field-meta.xml
<CustomField>
    <fullName>tz__DST_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a hidden field and should not be added to the page layouts.</description>
    <inlineHelpText>This is a hidden field and should not be added to the page layouts.</inlineHelpText>
    <label>DST Setting</label>
    <referenceTo>tz__DST_Setting__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>