force-app/main/default/objects/Lead/fields/tz__Local_Time_24_Short__c.field-meta.xml
<CustomField>
    <fullName>tz__Local_Time_24_Short__c</fullName>
    <description>Shows the current local time (without date) for the Lead in 24-hr format.</description>
    <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
    <inlineHelpText>Shows the current local time (without date) for the Lead in 24-hr format.</inlineHelpText>
    <label>Local Time</label>
    <type>Text</type>
</CustomField>